[package]
name = "stage_dispatch_crossbeam_executors"
version = "0.1.0"
authors = ["Titan Class P/L"]
edition = "2018"
license = "Apache-2.0"
description = "A Crossbeam/executors flavoured actor dispatcher library for core_stage"
homepage = "https://www.titanclass.com.au/"
repository = "https://github.com/titanclass/stage"
readme = "README.md"

[dependencies]
crossbeam-channel = "0.5"
executors = "0.8.0"
log = "0.4"
stage_core = { path = "../core" }

[dev-dependencies]
env_logger = "0.8.3"